fix(www): scroll page two on mobile had no bottom padding

--- a/www/src/styles.css
+++ b/www/src/styles.css
@@ -63,6 +63,9 @@ body > section {
 body > section:not(:first-of-type) > article {
   @apply pt-28 md:pt-4;
 }
+body > section:last-of-type > article {
+  @apply pb-16 md:pb-4;
+}
 
 .card {
   @apply bg-white shadow-md p-4;
